[tool.poetry]
name = "python_ble_uart_test"
version = "0.1.0"
description = ""
authors = ["Coyt Barringer <coyt.barringer@Gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
bleak = "^0.6.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
